syntax = "proto3";

option csharp_namespace = "NambaDoctor.Proto.v1";

package nambadoctor.v1;

service PrescriptionWorkerV1 {
	rpc SaveNewPrescription(PrescriptionObject) returns (PrescriptionResponse);
	rpc GetPrescriptionOfAppointment(PrescriptionRequest) returns (PrescriptionObject);
}

message PrescriptionRequest{
	string AppointmentId = 1;
}

message PrescriptionResponse{
    string PrescriptionId = 1;
}

message PrescriptionObject{
	string Id = 1;
    string AppointmentId = 2;
    string History = 3;
    string Examination = 4;
    string Diagnosis = 5;
    string DiagnosisType = 6;
    InvestigationList Investigations = 7;
    string Advice = 8;
    string DoctorId = 9;
    string PatientId = 10;
    int64 CreatedDateTime = 11;
    repeated MedicineObject Medicines = 12;
}

message InvestigationList{
    repeated string Investigation = 1;
}

message MedicineObject{
    string MedicineName = 1;
    string Dosage = 2;
    string RouteOfAdministration = 3;
    string Intake = 4;
    int32 Duration = 5;
    string Timings = 6;
    string SpecialInstructions = 7;
}